feat: 新增 MCP 命令模板与流水线并行作用域
- 新增 MCP stdio 命令模板清单：接口、控制器、前端接入面板与模板注册
- 内置库启动方式改为 `embedded` 参数，支持 Linux/macOS 且与 Windows 脚本语义一致
- 修复并行分支共用上下文导致的变量竞态，改为子作用域按声明顺序合并
- 修复无 output_var 节点重复到达时的 NPE，并新增循环节点执行支持
- 更新插件钩子生效矩阵文档，补充前端单测脚本与版本号